# language_and_automataP2

./: CMakeLists.txt  README.md  main.cpp
system/: Expression.cpp  Expression.h  Grammar.cpp  Grammar.h  Rule.cpp  Rule.h
system/Var_Ter/: Interface_Ter_Var.cpp  Interface_Ter_Var.h  Terminal.cpp  Terminal.h  Variable.cpp  Variable.h
